--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,6 +1,6 @@
 /*-----------------------------------------------------------------------------------
 
-    Template Name: Logio - Logistics & Transportation HTML5 Template
+    Template Name: Fraven - Logistics & Transportation HTML5 Template
     Description: Logistics & Transportation HTML5 Template
     Author: BDevs
     Version: 1.0
