--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 /*-----------------------------------------------------------------------------------
 
-    Template Name: Logio - Logistics & Transportation HTML5 Template
+    Template Name: Fraven - Logistics & Transportation HTML5 Template
     Description: Logistics & Transportation HTML5 Template
     Author: BDevs
     Version: 1.0
