--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6950,4 +6950,27 @@ button {
   padding: 16px 32px 16px 29px;
 }
 
+.map-wrapper {
+  width: 100%;
+  max-width: 1600px;
+  margin: 0 auto;
+}
+
+.responsive-iframe-container {
+  position: relative;
+  width: 100%;
+  padding-bottom: 56.25%; /* 16:9 aspect ratio */
+  height: 0;
+  overflow: hidden;
+}
+
+.responsive-iframe-container iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: 0;
+}
+
 /*# sourceMappingURL=main.css.map */
